--- a/mernapp/src/index.css
+++ b/mernapp/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Neue Haas Grotesk Display Pro 65 Medium" !important;
 }
 
 code {
